<resources>
    <string name="app_name">TestJob</string>
    <string name="home">Главная</string>
    <string name="favorites">Избранное</string>
    <string name="account">Аккаунт</string>
    <string name="resume">Продолжить</string>
    <string name="heading">Тысячи курсов \nв одном месте</string>
    <string name="image">картинка</string>
    <string name="entrance">Вход</string>
    <string name="email">Email</string>
    <string name="passport">Пароль</string>
    <string name="enter_the_password">Введите пароль</string>
    <string name="example">example@gmail.com</string>
    <string name="search_courses">Search courses...</string>
    <string name="no_account">Нет аккаунта?</string>
    <string name="registration">Регистрация</string>
    <string name="forgot_my_password">Забыл пароль</string>
    <string name="vk">ВКонтакте</string>
    <string name="ok">Одноклассники</string>
    <string name="date_added">По дате добавления</string>
    <string name="no_courses">У вас пока нет избранных курсов</string>
    <string name="more_detailed">Подробнее</string>
</resources>