<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingTop="140dp"
    android:paddingBottom="48dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="left"
        android:text="@string/entrance"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="left"
            android:text="@string/email"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_dark_input"
            android:hint="@string/example"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="16dp"
            android:paddingVertical="10dp"
            android:textColorHint="#80FFFFFF" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="left"
            android:text="@string/passport"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_dark_input"
            android:hint="@string/enter_the_password"
            android:inputType="textPassword"
            android:paddingHorizontal="16dp"
            android:paddingVertical="10dp"
            android:textColorHint="#80FFFFFF" />
    </LinearLayout>

    <Button
        android:id="@+id/loginButton"
        style="@style/AppButtonTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:text="@string/entrance" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:lineHeight="15sp"
            android:text="@string/no_account"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/registerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/roboto_bold"
            android:lineHeight="15sp"
            android:text="@string/registration"
            android:textColor="@color/green"
            android:textSize="12sp" />
    </LinearLayout>


    <TextView
        android:id="@+id/forgotPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="25dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/roboto_bold"
        android:lineHeight="15sp"
        android:text="@string/forgot_my_password"
        android:textColor="@color/green"
        android:textSize="12sp" />


    <View
        android:layout_width="328dp"
        android:layout_height="1dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:background="#4D555E" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/vkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/vk"
            android:src="@drawable/ic_vk" />

        <ImageButton
            android:id="@+id/okButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/ok"
            android:src="@drawable/ic_ok" />
    </LinearLayout>

    <View
        android:layout_width="108dp"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/divider_line" />

</LinearLayout>